--- a/frontend/FitnessTracker/package.json
+++ b/frontend/FitnessTracker/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "fitnesstracker",
+  "name": "fitness_tracker",
   "version": "1.0.0",
   "main": "index.ts",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
+  "license": "MIT",
   "dependencies": {
+    "depcheck": "^1.4.7",
     "expo": "~52.0.10",
     "expo-status-bar": "~2.0.0",
-    "fitnesstracker": "file:",
+    "fitness_tracker": "file:",
     "react": "18.3.1",
     "react-native": "0.76.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.8.1",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
+    "babel-preset-expo": "^12.0.2",
+    "jest": "^29.7.0",
+    "react-test-renderer": "^18.3.1",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios"
+  }
 }
