--- a/frontend/FitnessTracker/tsconfig.json
+++ b/frontend/FitnessTracker/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "target": "es5",
+    "module": "commonjs",
+    "jsx": "react",
+    "forceConsistentCasingInFileNames": true
   }
 }
