--- a/services/user-auth-service/package.json
+++ b/services/user-auth-service/package.json
@@ -6,11 +6,15 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
     "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
     "user-auth-service": "file:"
   }
 }
