--- a/services/user-auth-service/package.json
+++ b/services/user-auth-service/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "cross-env NODE_ENV=test jest"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.5",   
     "express": "^4.21.1",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
